--- a/404.md
+++ b/404.md
@@ -2,7 +2,7 @@
 title: Page not found
 heading: Whoops, it looks like you got lost
 sub_heading: We broke this page, or it doesn't exist
-banner_image: "/img/banner.png"
+banner_image: "/img/research.png"
 hero_button:
   text: Go home
   href: "/"
